# TodoToday

./: .env.example  .gitignore  README.md  pyproject.toml
launchagent/: com.todotoday.briefing.plist  install.sh  run-if-needed.sh
src/todotoday/: mcp_server.py  run_briefing.py
src/todotoday/tools/: calendar_tools.py  email_tools.py  reminders_tools.py
